<resources>
    <string name="app_name">Homework Lesson 9</string>
    <string name="tv_hello_LFL_hint">Hello</string>
    <string name="username_wrapper_LFL_hint">Username</string>
    <string name="et_password_LFL_hint">Password</string>
    <string name="tv_register_LFL_text">Register</string>
    <string name="btn_login_text">Login</string>
    <string name="et_login_RFL_hint">Login</string>
    <string name="et_password_RFL_hint">Password</string>
    <string name="et_first_name_RFL_hint">First name</string>
    <string name="et_last_name_RFL_hint">Last name</string>
    <string name="cb_male_RFL_text">Male</string>
    <string name="cb_female_RFL_text">Female</string>
    <string name="btn_register_RFL_text">register</string>
    <string name="empty_field_message">Fields should be filled</string>
    <string name="non_registered_used_message">User is not registered</string>
    <string name="used_login_message">Login is used</string>
    <string name="no_gender_message">No gender selected</string>
    <string name="sort_users">Sort users by...</string>
    <string name="by_login">by login</string>
    <string name="by_first_name">by first name</string>
    <string name="by_last_name">by last name</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="non_registered_user_or_wrong_password">User doesn\'t exist, or wrong password</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="kobe_bryant">Kobe Bryant</string>
    <string name="user_list_empty">Users list empty</string>
</resources>
