<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorFragmentBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_wrapper_RFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_login_RFL"
            android:maxLength="18"
            android:hint="@string/et_login_RFL_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_wrapper_RFL"
        android:layout_below="@id/login_wrapper_RFL"
        android:layout_marginTop="@dimen/password_wrapper_RFL_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password_RFL"
            android:maxLength="18"
            android:hint="@string/et_password_RFL_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_wrapper_RFL"
        android:layout_below="@id/password_wrapper_RFL"
        android:layout_marginTop="@dimen/first_name_wrapper_RFL_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_first_name_RFL"
            android:maxLength="18"
            android:hint="@string/et_first_name_RFL_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_wrapper_RFL"
        android:layout_below="@id/first_name_wrapper_RFL"
        android:layout_marginTop="@dimen/last_name_wrapper_RFL_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <EditText
            android:id="@+id/et_last_name_RFL"
            android:maxLength="18"
            android:hint="@string/et_last_name_RFL_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_fake_RFL"
        android:layout_marginTop="@dimen/tv_fake_RFL_margin_top"
        android:layout_below="@id/last_name_wrapper_RFL"
        android:layout_centerHorizontal="true"
        android:text=" "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cb_male_RFL"
        android:text="@string/cb_male_RFL_text"
        android:layout_marginRight="@dimen/cb_male_RFL_padding_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_fake_RFL"
        android:layout_toLeftOf="@id/tv_fake_RFL" />

    <CheckBox
        android:id="@+id/cb_female_RFL"
        android:text="@string/cb_female_RFL_text"
        android:layout_marginLeft="@dimen/cb_female_RFL_margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_fake_RFL"
        android:layout_alignLeft="@id/tv_fake_RFL" />

    <Button
        android:id="@+id/btn_register_RFL"
        android:layout_marginTop="@dimen/btn_register_RFL_margin_top"
        android:layout_below="@id/cb_female_RFL"
        android:text="@string/btn_register_RFL_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
</RelativeLayout>