<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_hello_LFL"
        android:layout_marginTop="@dimen/tv_hello_LFL_margin_top"
        android:text="@string/tv_hello_LFL_hint"
        android:textSize="@dimen/tv_hello_LFL_text_size"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_wrapper_LFL"
        android:layout_marginTop="@dimen/username_wrapper_LFL_margin_top"
        android:layout_below="@id/tv_hello_LFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_username_LFL"
            android:maxLength="18"
            android:hint="@string/username_wrapper_LFL_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_wrapper_LFL"
        android:layout_marginTop="@dimen/password_wrapper_LFL_margin_top"
        android:layout_below="@id/username_wrapper_LFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password_LFL"
            android:maxLength="18"
            android:hint="@string/et_password_LFL_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_register_LFL"
        android:clickable="true"
        android:text="@string/tv_register_LFL_text"
        android:textSize="@dimen/tv_register_LFL_text_size"
        android:layout_marginTop="@dimen/tv_register_LFL_margin_top"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@id/password_wrapper_LFL"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_login_text"
        android:layout_marginTop="@dimen/btn_login_margin_top"
        android:layout_below="@id/tv_register_LFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>